--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -7,7 +7,7 @@
     margin: 0 auto;
     margin-top: 8rem;
     h1,hr{
-        color: #aa978e;
+        color: #33006E;
         margin-bottom: 2rem;
     }
     .projects{
