--- a/components/Info/Info.module.scss
+++ b/components/Info/Info.module.scss
@@ -1,18 +1,20 @@
 .container{
     margin-bottom: 2rem;
+    background-color: #ffffff;
+    padding: 1rem;
     h1{
-        color:#aa978e;
+        color:#33006E;
     }
     li{
-        color: #aa978e;
+        color: #33006E;
         .block{
             h3{
-                color:#aa978e;
+                color:#33006E;
             }
             p{
                 color: black;
                 span{
-                    color:#aa978e;
+                    color:#33006E;
                 }
             }
         }
