--- a/styles/BlogPage.module.scss
+++ b/styles/BlogPage.module.scss
@@ -1,20 +1,27 @@
+@import '@styles/variables.scss';
 .container {
   min-height: 100vh;
   margin-top: 1rem;
   position: relative;
   z-index: 0;
-  width: 95%;
-  margin: 0 auto;
   margin-top: 8rem;
+  padding: 0 2rem;
+  background-color: $primary-white;
+  .blogContainer {
+    padding-bottom: 2rem;
+    position: relative;
+  }
   h1 {
     margin: 10rem auto 3rem auto;
     width: 95%;
   }
+  .dateTag {
+    right: 20px;
+  }
   .content {
-    .html {
-      width: 90%;
-      margin: 1rem auto;
-    }
+    width: 90%;
+    margin: 1rem auto;
+    margin-bottom: 4rem;
     img {
       margin: 1rem auto;
       max-width: 700px;
