--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,18 +1,24 @@
-.container{
-    min-height: 100vh;
-    margin-top: 1rem;
-    position: relative;
-    z-index: 0;
-    width: 95%;
+@import '@styles/variables.scss';
+.container {
+  min-height: 100vh;
+  margin-top: 1rem;
+  position: relative;
+  z-index: 0;
+
+  margin: 8rem auto 0 auto;
+  background-color: $primary-white;
+  padding: 2rem 2rem 4rem;
+
+  h1,
+  hr {
+    color: $primary-color;
+    margin-bottom: 2rem;
+  }
+  .projects {
+    width: 90%;
     margin: 0 auto;
-    margin-top: 8rem;
-    h1,hr{
-        color: #33006E;
-        margin-bottom: 2rem;
-    }
-    .projects{
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
 }
